--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                    
         }
 
+        function createMap(){
+          console.log("create map....")
+        }
+
 
 
     </script>
